recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:21: error: not found: value doite
    doite(90)
    ^